# plui

./: .gitignore  CMakeLists.txt  README.md  stb_image.h  test.cpp
doc/: plui头文件模板.md  数据结构(暂定).md  系统需要提供的API.md  项目(或许会)包含哪些内容.md
include/: CMakeLists.txt  c.h  config.h  cpp.hpp  define.h  osapi.h  pl2d.h  pl2d.hpp  plds.hpp  plui.hpp  type.h  type.hpp  type_traits
include/bits/: c++config.h  os_defines.h
include/c/: color.h  fft.h  math.h  string.h
include/cpp/: check.hpp  exch.hpp  math.hpp  string.hpp
include/pl2d/: ctx.hpp  drawable.h  drawable.hpp  matrix.h  pixel.h  pixel.hpp  point.hpp  point2-t.hpp  rect.hpp  texture.h  texture.hpp
include/plds/: base.hpp  server.hpp
include/plui/: CMakeLists.txt  both.h  both.hpp  element.hpp
src/: CMakeLists.txt
src/both/: color.c  fb.cpp
src/c/: color.c  fft.c  string.c
src/c/fft/: f128.c
src/cpp/: CMakeLists.txt  cpp.cpp
src/pl2d/: CMakeLists.txt  drawable.cpp  pixel.cpp  texture.cpp
src/pl2d/pix/: color-space.cpp  gamma.cpp  gamma.hpp  gray.cpp  it.cpp  mix.cpp  pixel.cpp
src/pl2d/tex/: blur.cpp  copy.cpp  draw.cpp  fft.cpp  get-set.cpp  init.cpp  paste.cpp  texture.cpp  trans.cpp
src/plds/base/: CMakeLists.txt  fb.cpp
src/plds/base/fb/: flush-bgr.hpp  flush-cases.hpp  flush-loop.hpp  flush-rgb.hpp  flush-rgb565.hpp  private.hpp
src/plds/client/: CMakeLists.txt
src/plds/server/: api-transform.cpp  server.cpp
src/plui/: CMakeLists.txt
src/server/: server.cpp
test/: CMakeLists.txt  gaussian-kernel.cpp  pow.cpp
test/c/: rbtree.c  rbtree.cpp
test/cpp/: rbtree.cpp  string.cpp
(+23 files in other folders)
